snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1-sources.jar.md5
e85fd38b38809e3210f0e51d9cf56e9f